# CMakeNuGetTools

./: .gitignore  CMakeLists.nuspec.cmake  CMakeLists.pack.autopkg.cmake  CMakeLists.pack.cmake  CMakeLists.txt  ChangeGeneratorToVS2017.ps1  ChangeGeneratorToVS2019.ps1  README.md  build.bat  build.cmake
cmake/: NuGetImport.cmake  NuGetImport.core.cmake  NuGetImport.single.cmake  NuGetTools.cmake
cmake/internal/: NuGetGit.cmake  NuGetImport.cmake  NuGetImport.core.cmake  NuGetImport.single.cmake  NuGetPack.autopkg.cmake  NuGetPack.cmake  NuGetPack.nupkg.cmake  NuGetPack.nuspec.cmake  NuGetSemVer.cmake  NuGetSemVer.git.cmake  NuGetSemVer.logic.cmake  NuGetTools.helper.cmake
examples/: PostInstallHook.cmake
tests/: NuGetSemVer.test.cmake  NuGetTools.helper.test.cmake  TestHelpers.cmake
tests/export_cmake_and_install/: CMakeLists.txt  CMakeSettings.json
tests/export_simple_cmake/: CMakeLists.txt  CMakeSettings.json
tests/export_simple_dot_targets/: CMakeLists.txt  CMakeSettings.json
tests/export_simple_toolchain/: CMakeLists.txt  CMakeSettings.json
tests/flatbuffers.x64-windows.vcpkg-export_simple_cmake/: CMakeLists.txt  CMakeSettings.json
tests/flatbuffers.x64-windows.vcpkg-export_simple_dot_targets/: CMakeLists.txt  CMakeSettings.json
tests/icu.x64-windows.vcpkg-export_cmake_and_install/: CMakeLists.txt  nomarks.c  utf8codeunits.c
tests/write_autopkg_nested/: CMakeLists.txt  CMakeSettings.json  calculate.c  sample_binary.cpp
tests/write_autopkg_nested/cmake/: WriteAutopkgNestedConfig.cmake.in
tests/write_autopkg_simple/: CMakeLists.txt  CMakeSettings.json  calculate.h  nomarks.c
tests/write_autopkg_simple/cmake/: WriteAutopkgSimpleConfig.cmake.in
tests/write_nuspec_simple/: CMakeLists.txt  CMakeSettings.json
tests/write_nuspec_simple/cmake/: WriteNuspecSimpleConfig.cmake.in
